--- a/instructeur/templates/instructeur_base.html
+++ b/instructeur/templates/instructeur_base.html
@@ -74,7 +74,7 @@
                         <div class="collapse navbar-collapse" id="sidenav">
                             <div class="navbar-nav flex-column">
                                 <span class="navbar-header">Dashboard</span>
-                                <ul class="list-unstyled ms-n2 mb-4">
+                                <ul class="list-unstyled ms-n2 mb-4 mb-8">
                                     <!-- Nav item -->
                                     <li class="nav-item active">
                                         <a class="nav-link" href="{% url 'instructeur_index' %}">
@@ -90,27 +90,15 @@
                                         </a>
                                     </li>
                                     <!-- Nav item -->
-                                    <!-- Nav item -->
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="instructor-students.html">
-                                            <i class="fe fe-user nav-icon"></i>
-                                            Students
-                                        </a>
-                                    </li>
-                                    <!-- Nav item -->
-
-
-                                    <!-- Nav item -->
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{% url 'instructeur_quizz' %}">
-                                            <i class="fe fe-help-circle nav-icon"></i>
-                                            Quiz
-                                        </a>
-                                    </li>
-                                    <!-- Nav item -->
 
                                 </ul>
 
+                                <div class="mb-8"></div>
+                                <div class="mb-8"></div>
+                                <div class="mb-8"></div>
+                                <div class="mb-8"></div>
+                                <div class="mb-8"></div>
+                                <div class="mb-8"></div>
 
                             </div>
                         </div>
