--- a/instructeur/templates/instructeur/instructeur_detaille_formation.html
+++ b/instructeur/templates/instructeur/instructeur_detaille_formation.html
@@ -194,6 +194,85 @@
         </div>
 
 
+        <!-- Card -->
+        <div class="card mb-4">
+            <!-- Card header -->
+            <div class="card-header">
+                <span class="mb-0 h3">Liste des apprenants</span>
+
+            </div>
+
+            <!-- Card body -->
+            <div class="card-body">
+                <!-- Form -->
+                <!-- Table -->
+                <div class="table-responsive overflow-y-hidden">
+                    <table class="table mb-0 text-nowrap table-hover table-centered text-nowrap">
+                        <thead class="table-light">
+                        <tr>
+                            <th>#</th>
+                            <th>#</th>
+                            <th>#</th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+
+
+                        <tr>
+                            <td>
+                                ---
+                            </td>
+                            <td> ---</td>
+                            <td> ---</td>
+
+
+                            <td>
+                                 <span class="dropdown dropstart">
+                                 <a class="btn-icon btn btn-ghost btn-sm rounded-circle"
+                                    href="#"
+                                    role="button"
+                                    id="courseDropdown"
+                                    data-bs-toggle="dropdown"
+                                    data-bs-offset="-20,20"
+                                    aria-expanded="false">
+                                                            <i class="fe fe-more-vertical"></i>
+                                                        </a>
+                                                        <span class="dropdown-menu" aria-labelledby="courseDropdown">
+                                                            <span class="dropdown-header">Setting</span>
+
+
+                                                            <a class="dropdown-item"
+                                                               href="#">
+                                                                <i class="fe fe-edit dropdown-item-icon"></i>
+                                                                Edit
+                                                            </a>
+
+
+                                                            <a class="dropdown-item"
+                                                               href="#">
+                                                                <i class="fe fe-eye dropdown-item-icon"></i>
+                                                                Détail
+                                                            </a>
+
+
+                                                        </span>
+                                                    </span>
+                            </td>
+                        </tr>
+
+
+                        </tbody>
+                    </table>
+                </div>
+
+
+            </div>
+            <!-- Table -->
+
+        </div>
+
+
     </div>
 
 
