--- a/instructeur/templates/instructeur/instructeur_edit_qcm.html
+++ b/instructeur/templates/instructeur/instructeur_edit_qcm.html
@@ -46,7 +46,7 @@
 
                         <div class="mb-3 mb-2 col-md-6">
                             <label class="form-label" for="description">
-                                Durre
+                                Description
                             </label>
 
                             <textarea class="form-control"  name="description" id="description"  rows="5">{{ qcm.description }}</textarea>
