--- a/instructeur/templates/instructeur/instructeur_formation_liste.html
+++ b/instructeur/templates/instructeur/instructeur_formation_liste.html
@@ -15,9 +15,9 @@
             <!-- Card body -->
             <div class="card-body">
                 <!-- Form -->
-                <form class="row gx-3">
+                <form class="row gx-3" >
                     <div class="col-lg-9 col-md-7 col-12 mb-lg-0 mb-2">
-                        <input type="search" class="form-control" placeholder="rechercher par nom de la formation">
+                        <input name="nom_formation" type="search" class="form-control" placeholder="rechercher par nom de la formation">
                     </div>
 
                 </form>
