--- a/instructeur/templates/instructeur/instructeur_index.html
+++ b/instructeur/templates/instructeur/instructeur_index.html
@@ -11,10 +11,10 @@
                 <div class="card mb-4">
                     <div class="p-4">
                         <span class="fs-6 text-uppercase fw-semibold">Formations</span>
-                        <h2 class="mt-4 fw-bold mb-1 d-flex align-items-center h1 lh-1">$467.34</h2>
+                        <h2 class="mt-4 fw-bold mb-1 d-flex align-items-center h1 lh-1">{{ nombre_formation }}</h2>
                         <span class="d-flex justify-content-between align-items-center">
-                        <span>Earning this month</span>
-                        <span class="badge bg-success ms-2">$203.23</span>
+                        <span></span>
+                        <span class="badge bg-success ms-2"></span>
                       </span>
                     </div>
                 </div>
@@ -24,24 +24,11 @@
                 <!-- Card -->
                 <div class="card mb-4">
                     <div class="p-4">
-                        <span class="fs-6 text-uppercase fw-semibold">students Enrollments</span>
-                        <h2 class="mt-4 fw-bold mb-1 d-flex align-items-center h1 lh-1">12,000</h2>
+                        <span class="fs-6 text-uppercase fw-semibold">Apprenants</span>
+                        <h2 class="mt-4 fw-bold mb-1 d-flex align-items-center h1 lh-1">{{ nombre_apprenant}}</h2>
                         <span class="d-flex justify-content-between align-items-center">
-                        <span>New this month</span>
-                        <span class="badge bg-info ms-2">120+</span>
-                      </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-12 col-12">
-                <!-- Card -->
-                <div class="card mb-4">
-                    <div class="p-4">
-                        <span class="fs-6 text-uppercase fw-semibold">Courses Rating</span>
-                        <h2 class="mt-4 fw-bold mb-1 d-flex align-items-center h1 lh-1">4.80</h2>
-                        <span class="d-flex justify-content-between align-items-center">
-                        <span>Rating this month</span>
-                        <span class="badge bg-warning ms-2">10+</span>
+                        <span></span>
+                        <span class="badge bg-info ms-2"></span>
                       </span>
                     </div>
                 </div>
