--- a/formation/templates/formation/detail_formation.html
+++ b/formation/templates/formation/detail_formation.html
@@ -445,7 +445,7 @@
 
                                         </div>
                                         <div class="d-grid flex-column gap-2">
-                                            <a href="#!" class="btn btn-primary">Acheter</a>
+                                            <a href="{% url 'apprenant_achat' formation.id %}" class="btn btn-primary">Acheter</a>
                                         </div>
 
 
